fixed items alignment

--- a/style.css
+++ b/style.css
@@ -1,36 +1,55 @@
-/* Reseta estilos padrões do navegador */
+/* Reset */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-/* Estilos Globais */
+/* Global Styles */
 body {
-    color: #FFFFFF; /* Texto branco para contraste */
-    line-height: 2;
-    background-color: #0F0F0F; /* Fundo principal escuro */
+    color: #FFFFFF;
+    background-color: #0F0F0F;
     font-family: 'Montserrat', sans-serif;
+    line-height: 2;
+    letter-spacing: 2.5px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    letter-spacing: 3px;
 }
 
 h1 {
     font-family: 'Barlow Condensed', sans-serif;
     font-weight: bold;
 }
+.section-container {
+    padding: 20px;
+    margin-right: 40px;
+}
 
+/* Specific Sections */
+.about-me,
+.projects,
+.skills,
+.contact {
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 20px;
+
+    border-radius: 8px;
+    color: #FFFFFF;
+}
+
+/* Background Effect */
 .background-effect {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    pointer-events: none; /* Permite que o mouse passe por cima */
-    z-index: -1; /* Coloca atrás do conteúdo */
+    pointer-events: none;
+    z-index: -1;
     transition: background-image 0.1s ease;
 }
+
 /* Navbar */
 .navbar {
     display: flex;
@@ -44,26 +63,24 @@ h1 {
     height: 100%;
     top: 0;
     left: 0;
-    z-index: 1;
-    text-align: center; /* Alinha texto e links ao centro */
     border-right: 3px solid #005B41;
-    transition: background 0.3s ease;
     z-index: 1;
-    overflow: hidden; /* Garante que o efeito de brilho não saia da navbar */
-    }
-      
-    .navbar::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: radial-gradient(circle at var(--mouse-x) var(--mouse-y), rgba(255, 255, 255, 0.5), transparent);
-        pointer-events: none; /* Garante que o pseudo-elemento não interfira com a navegação */
-        z-index: -1; /* Coloca o brilho atrás do conteúdo da navbar */
-        transition: background 0.3s ease; /* Suaviza o efeito de brilho */
-    }
+    overflow: hidden;
+    text-align: center;
+}
+
+.navbar::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(circle at var(--mouse-x) var(--mouse-y), rgba(255, 255, 255, 0.5), transparent);
+    pointer-events: none;
+    z-index: -1;
+    transition: background 0.3s ease;
+}
 
 .navbar .logo img {
     margin-top: 30px;
@@ -74,19 +91,20 @@ h1 {
     border: 2px solid #005B41;
 }
 
+.navbar .logo a,
+.navbar h1 {
+    color: #008170;
+    margin: 5px 0;
+}
+
 .navbar .logo a {
     font-size: 44px;
-    color: #008170; /* Verde mais claro */
     text-decoration: none;
-    display: block;
-    margin: 5px 0;
 }
 
 .navbar h1 {
     font-size: 32px;
     font-weight: normal;
-    color: #008170;
-    margin: 5px 0;
 }
 
 .nav-links {
@@ -100,11 +118,11 @@ h1 {
 }
 
 .nav-links a {
-    text-decoration: none;
     color: #FFFFFF;
     font-weight: 500;
     padding: 5px;
     display: block;
+    text-decoration: none;
 }
 
 .nav-links a:hover {
@@ -113,47 +131,44 @@ h1 {
 
 .nav-links .hello a {
     margin-top: 10px;
-    background-color: #232D3F; 
+    background-color: #232D3F;
     color: #0F0F0F;
     padding: 10px 20px;
-    border-radius: 50px; 
+    border-radius: 50px;
     font-weight: bold;
-    text-decoration: none;
-    display: inline-block; /* Altera de block para inline-block */
-    transition: background-color 0.3s, transform 0.3s; 
-    width: auto; /* Remove qualquer largura fixa */
+    transition: background-color 0.3s, transform 0.3s;
+    display: inline-block;
+    width: auto;
 }
 
 .nav-links .hello a:hover {
-    background-color: #005B41; 
-    transform: scale(1.05); 
+    background-color: #005B41;
+    transform: scale(1.05);
 }
 
 .nav-links .hello a:active {
-    background-color: #013124; 
+    background-color: #013124;
 }
 
 .social-icons {
-    margin-top: auto; /* Empurra os ícones para o fundo da navbar */
+    margin-top: auto;
 }
 
 .social-icons a img {
     width: 24px;
     margin: 0 10px;
-    filter: brightness(0) invert(1); /* Ícones em branco */
+    filter: brightness(0) invert(1);
     opacity: 50%;
 }
+
 .social-icons a:hover img {
-    width: 24px;
-    margin: 0 10px;
-    filter: brightness(0) invert(1); /* Ícones em branco */
     opacity: 100%;
 }
 
 /* Main Content */
 .content {
     padding: 20px;
-    margin-left: 50%; /* Ajusta a margem para a largura da navbar */
+    margin-left: 50%;
 }
 
 .hero-container {
@@ -162,25 +177,33 @@ h1 {
     gap: 20px;
     margin-right: 40px;
 }
-.hero-container h1{
-    font-size:60px;
-    font-weight: normal;
-    
-}
 
 .hero-text-container {
-    background-color: #232D3F; /* Fundo azul escuro */
+    margin: 30px 30px;
+    background-color: #232D3F;
     padding: 20px;
-
 }
 
 .hero-text {
-    color: #ddd; /* Cor do texto do parágrafo */
+    color: #ddd;
+    text-align: justify;
+    margin: 15px;
 }
 
-/* Seção de Projetos */
+.hero-container h1 {
+    margin: 15px;
+    font-size: 60px;
+    font-weight: normal;
+}
+
+.hero-container h2 {
+    margin: 15px;
+}
+
+/* Projects Section */
 .projects {
     padding: 20px;
+    margin-right: 40px;
 }
 
 .projects h1 {
@@ -197,7 +220,7 @@ h1 {
 
 .card {
     padding: 20px;
-    background-color: #232D3F; /* Azul escuro */
+    background-color: #232D3F;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     text-align: center;
@@ -206,20 +229,25 @@ h1 {
 
 .card:hover {
     transform: translateY(-10px);
-    background-color: #005B41; /* Verde escuro ao passar o mouse */
+    background-color: #005B41;
 }
 
 .card h3 {
-    color: #008170; /* Verde mais claro */
+    color: #008170;
     margin-bottom: 10px;
 }
-/* Contact */
+
+/* Contact Section */
 .contact {
-    background-color: #232D3F; /* Azul escuro ou qualquer cor que se encaixe no design */
+    background-color: #232D3F;
     padding: 20px;
     border-radius: 8px;
     margin: 20px 0;
-    color: #FFFFFF; /* Texto branco para contraste */
+    color: #FFFFFF;
+    width: 91%;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 20px;
 }
 
 .contact h1 {
@@ -240,22 +268,22 @@ h1 {
 .contact-form input,
 .contact-form textarea {
     padding: 10px;
-    border: 1px solid #005B41; /* Cor da borda */
+    border: 1px solid #005B41;
     border-radius: 4px;
-    background-color: #FFFFFF; /* Cor de fundo do input */
-    color: #000000; /* Texto do input */
+    background-color: #FFFFFF;
+    color: #000000;
     font-size: 16px;
 }
 
 .contact-form textarea {
-    resize: vertical; /* Permite redimensionar verticalmente */
+    resize: vertical;
 }
 
 .contact-form button {
-    background-color: #005B41; /* Cor do botão */
-    color: #FFFFFF; /* Texto do botão */
-    border: none;
+    background-color: #005B41;
+    color: #FFFFFF;
     padding: 10px 20px;
+    border: none;
     border-radius: 4px;
     cursor: pointer;
     font-size: 18px;
@@ -263,18 +291,19 @@ h1 {
 }
 
 .contact-form button:hover {
-    background-color: #004c3f; /* Cor do botão ao passar o mouse */
+    background-color: #004c3f;
 }
+
 /* Footer */
 .footer {
-    background-color: #232D3F; 
+    background-color: #0F0F0F;
     padding: 30px 40px;
     color: #FFFFFF;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    border-top: 2px solid #005B41; 
-    margin-top: auto; 
+    border-top: 2px solid #005B41;
+    margin-top: auto;
 }
 
 .footer-logo a {
@@ -287,9 +316,11 @@ h1 {
 /* Responsivity */
 @media (max-width: 768px) {
     .navbar {
-        position: relative;
         width: 100%;
         height: auto;
+        position: relative;
+        border-right: none;
+        border-bottom: 3px solid #005B41;
     }
 
     .content {
